2008-07-10	Jannis Pohlmann <jannis@xfce.org>

	* autogen.sh: Fix @REVISION@ substitution when using git svn.

2008-07-06	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu.c: Add #if 0 around 
	  xfce_menu_resolve_legacy_menus() and 
	  xfce_menu_resolve_legacy_menu(). Avoids build errors on some
	  systems.

2008-02-06	Jannis Pohlmann <jannis@xfce.org>

	* STATUS: Status file updated, mainly to reflect the progress made
	  with filesystem monitoring.

2008-01-02	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu-item.{c,h}: Add support for the Comment field
	  via xfce_menu_item_get_comment().

2007-12-29	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu-monitor.{c,h}: Add support for defining what
	  kind of files/directories are monitored (XfceMenuMonitorFlags,
	  xfce_menu_monitor_set_flags(), xfce_menu_monitor_get_flags(),
	  xfce_menu_monitor_has_flags()).
	* libxfce4menu/xfce-menu.c: Check monitor flags before adding
	  files/directories to the monitoring system.
	* tests/test-display-menu.c: Center window on screen.

2007-12-27	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu-monitor.c: Use the KEY, not the VALUE pointer
	  to remove items from the shared handle hash table. In this case, use
	  the directory string instead of the shared handle. This should fix
	  the issue we've had with monitoring directories only.

2007-12-23	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/xfce-menu-item.{c,h}: Add support for "GenericName" as
	  requested by Brian. Also add a convenience function 
	  xfce_menu_item_has_category (XfceMenuItem *, const char *).
	* libxfce4menu/xfce-menu-item-cache.c: Re-add caching features, but now
	  also allow the cache to be invalidated using _item_cache_invalidate().
	  This can be used in combination with file monitoring: Once something
	  has changed a) destroy the current menu, b) invalidate the cache and
	  c) create the menu again.

2007-10-21	Jannis Pohlmann <jannis@xfce.org>
