@@ -1,3 +1,8 @@
+2008-07-15	Jannis Pohlmann <jannis@xfce.org>
+
+	* autogen.sh: Change @REVISION@ substitution for git svn
+	  repositories again.
+
 2008-07-10	Jannis Pohlmann <jannis@xfce.org>
 
 	* autogen.sh: Fix @REVISION@ substitution when using git svn.
